; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_fs.c_sys_rmdir.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_fs.c_sys_rmdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@_EFAULT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"rmdir(%s)\00", align 1
@AT_PWD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_rmdir(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* @MAX_PATH, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %4, align 8
  %10 = alloca i8, i64 %8, align 16
  store i64 %8, i64* %5, align 8
  %11 = load i32, i32* %3, align 4
  %12 = trunc i64 %8 to i32
  %13 = call i64 @user_read_string(i32 %11, i8* %10, i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = load i32, i32* @_EFAULT, align 4
  store i32 %16, i32* %2, align 4
  store i32 1, i32* %6, align 4
  br label %21

17:                                               ; preds = %1
  %18 = call i32 @STRACE(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* %10)
  %19 = load i32, i32* @AT_PWD, align 4
  %20 = call i32 @generic_rmdirat(i32 %19, i8* %10)
  store i32 %20, i32* %2, align 4
  store i32 1, i32* %6, align 4
  br label %21

21:                                               ; preds = %17, %15
  %22 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %22)
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @user_read_string(i32, i8*, i32) #2

declare dso_local i32 @STRACE(i8*, i8*) #2

declare dso_local i32 @generic_rmdirat(i32, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
